Wire ModLauncher FML scan to Folia/NeoForge jars
Override creliaserver launch handler to feed NeoForgeDevProvider from
crelia.serverJar/crelia.neoforgeJar, expose Folia AT jar as client-extra
for assets discovery, and call ServerModLoader before Folia Main.